--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,17 @@
 
 * {
   box-sizing: border-box;
+  z-index: 0.1;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
-  background-image: url("../img/background-other-modify.png");
   /* status-bar fixed 위치의 세로 길이 만큼 padding */
   padding-top: 94px;
   padding-bottom: 67px;
   /*특정 화면 크기에서 input 입력시 스크롤 점멸현상 제어를 위한 코드 */
   -ms-overflow-style: none;
+
   color: #2e363e;
 
   background-repeat: no-repeat;
@@ -42,7 +43,21 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
-#login {
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/background-other-modify.png");
+  background-size: cover;
+  background-position: center center;
+  transform: translateZ(0);
+  will-change: transform;
+  z-index: -1;
+}
+
+.bg#login {
   padding-top: 30px;
   background-image: url("../img/background-img-login.jpg");
 }
