--- a/music-talk/css/screens/chatting.css
+++ b/music-talk/css/screens/chatting.css
@@ -1,3 +1,6 @@
+.alt-header.chatting-screen__header {
+  color: black;
+}
 .chatting-screen {
   background-color: rgb(255, 255, 255);
   padding-top: 92px;
@@ -9,7 +12,7 @@
   transform: translate3d(0, 0, 0);
   box-sizing: border-box;
   width: 100vw;
-  top: 25px;
+  top: 35px;
   z-index: 9;
   box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
 }
@@ -30,6 +33,8 @@
 
 .message-screen {
   padding: 0px 18px;
+  color: black;
+  font-weight: 700;
 }
 
 .message-screen__other,
