--- a/music-talk/css/screens/play.css
+++ b/music-talk/css/screens/play.css
@@ -40,6 +40,7 @@ img {
   align-items: center;
 }
 .play-music {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
