--- a/music-talk/css/style.css
+++ b/music-talk/css/style.css
@@ -98,9 +98,7 @@ body {
 
   z-index: 9;
 
-  /* animation: loading 1s linear forwards; */
-  opacity: 0;
-  visibility: hidden;
+  animation: loading 0.7s linear forwards;
 }
 
 .loading span {
@@ -108,6 +106,13 @@ body {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
+}
+
+.loading img {
+  object-fit: contain;
+  width: inherit;
+  height: inherit;
+  border-radius: 15px;
 }
 
 @media screen and (min-width: 700px) {
@@ -121,6 +126,9 @@ body {
 
 @keyframes loading {
   0% {
+    opacity: 1;
+  }
+  50% {
     opacity: 1;
   }
   100% {
